# vira

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: deploy.yaml
cli/: pyproject.toml  vira_cli.py  virapi_cli.py
docs/: LIFESPAN_GUIDE.md  MIDDLEWARE_GUIDE.md  README.md  ROUTING_GUIDE.md  mkdocs.yml
docs/docs/: index.md
docs/docs/cli/: index.md
docs/docs/middlewares/: cors.md  csp.md  exceptions.md  g_zip.md  http_headers.md  https_redirect.md  rate_limit.md  trusted_hosts.md
docs/docs/plugins/: jwt.md  oauth2.md  openapi.md
docs/docs/roadmap/: index.md
docs/docs/usage/: getting-started.md
docs/docs/vira_framework/: api_router.md  logger.md  middleware_chain.md  parser.md  plugin.md  request.md  response.md  route.md  state.md  status.md  upload_file.md  vira.md
examples/: README.md  complete_example.py  jwt.py  oauth2.py  state.py  type_validation.py
middlewares/: __init__.py  cors.py  gzip.py  pyproject.toml
middlewares/cors/: pyproject.toml
middlewares/csp/: pyproject.toml
middlewares/exception/: exception.py  pyproject.toml
middlewares/g_zip/: pyproject.toml
middlewares/http_headers/: pyproject.toml
middlewares/https_redirect/: https_redirect.py  pyproject.toml
middlewares/rate_limit/: pyproject.toml  rate_limit.py
middlewares/trusted_host/: pyproject.toml
middlewares/vira_middlewares/: csp.py  http_headers.py  trusted_host.py
middlewares/virapi_middlewares/: cors.py  csp.py  exception.py  g_zip.py  http_headers.py  https_redirect.py  rate_limit.py  trusted_host.py
plugins/: openapi.py  pyproject.toml
plugins/jwt/: base.py  decorators.py  pyproject.toml
plugins/oauth2/: client_security.py  oauth2.py  pyproject.toml
plugins/openapi/: pyproject.toml
plugins/vira_plugins/jwt/: jwt.py
plugins/virapi_plugins/: openapi.py
plugins/virapi_plugins/jwt/: base.py  decorators.py  jwt.py
plugins/virapi_plugins/oauth2/: client_security.py  oauth2.py
tests/: test_client.py  test_fastasgi.py  test_lifespan.py  test_middleware.py  test_request.py  test_response.py  test_routing.py  test_testing_package.py
vira/: __init__.py  api_router.py  app.py  background_tasks.py  exceptions.py  http_responses.py  logger.py  plugin.py  request_data.py  response.py  router.py  state.py  status.py  types.py  vira.py
vira/examples/: basic.py  lifespan.py
vira/middleware/: __init__.py  middleware_chain.py
vira/middleware/builtin_middleware/: __init__.py  cors.py  exception.py  gzip.py  https_redirect.py  httpsredirect.py  rate_limit.py  trusted_host.py  trustedhost.py
vira/request/: __init__.py  request.py  upload_file.py
vira/request/multipart/: __init__.py  parser.py
vira/routing/: __init__.py  api_router.py  route.py
vira/testing/: __init__.py  request.py  response.py
virapi/: __init__.py  plugin.py  response.py  status.py  virapi.py
virapi/middleware/: __init__.py  middleware_chain.py
virapi/request/: __init__.py  request.py  upload_file.py
virapi/request/multipart/: __init__.py
virapi/routing/: __init__.py  api_router.py  route.py
