[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vira-cli"
version = "0.1.0"
description = "Command Line Interface (CLI) for the Vira ASGI framework."
authors = [{ name = "Víctor Gómez", email = "mdsuanzes@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"

# Dependencias de runtime: Necesita el core de Vira y Uvicorn para funcionar.

dependencies = [
    "vira",            # El paquete core del framework
    "uvicorn>=0.20.0",
]

# Definición del Entry Point: Esto crea el comando 'vira'

[project.scripts]

# Asume que el código ejecutable de la CLI está en vira-cli/cli.py,
# y la función de entrada es 'main'.

vira = "vira_cli.cli:main"

[tool.setuptools.packages.find]

# Incluye el código de la CLI que debería estar en el directorio vira-cli

where = ["."]
include = ["vira_cli*"]
