[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vira-cli"
version = "0.1.0"
description = "Command Line Interface (CLI) for the Vira ASGI framework."
authors = [
    {name = "Víctor Gómez", email = "mdsuanzes@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "vira", # El paquete core del framework
    "uvicorn>=0.20.0",
]

[project.scripts]
vira = "vira_cli:main"

[tool.setuptools]
py-modules = ["vira_cli"]