[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virapi_middlewares"
version = "0.1.0"
description = "Middleware implementation for Virapi."
authors = [{ name = "Víctor Gómez", email = "mdsuanzes@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = ["virapi"]

[tool.setuptools]
packages = ["virapi_middlewares"]