[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virapi_plugins"
version = "0.1.0"
description = "Plugin implementation for Virapi."
authors = [{ name = "Víctor Gómez", email = "mdsuanzes@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = ["virapi"]

[tool.setuptools]
packages = ["virapi_plugins"]