[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vira_middleware_csp"
version = "0.1.0"
description = "Content Security Policy Middleware implementation for Vira."
authors = [{ name = "Víctor Gómez", email = "mdsuanzes@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = ["vira"]

[tool.setuptools]
py-modules = ["csp"]