[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vira_middleware_trusted_host"
version = "0.1.0"
description = "Trusted Host Middleware implementation for Vira."
authors = [{ name = "Víctor Gómez", email = "mdsuanzes@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = ["vira"]

[tool.setuptools]
py-modules = ["trusted_host"]