[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vira_plugins_jwt"
version = "0.1.0"
description = "JWT Plugin for Vira."
authors = [{ name = "Víctor Gómez", email = "mdsuanzes@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = ["vira", "jwt"]

[tool.setuptools]
py-modules = ["jwt", "base", "decorators"]